--- a/index.html
+++ b/index.html
@@ -4,19 +4,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EstheticaAI - Automação para Clínicas de Estética com IA</title>
+    <title>IA Beauty - Automação para Clínicas de Estética com IA</title>
     <meta name="description" content="Transforme sua clínica de estética com automação via WhatsApp. Agendamentos, confirmações e atendimento ao cliente com inteligência artificial." />
-    <meta name="author" content="EstheticaAI" />
+    <meta name="author" content="IABeauty" />
 
-    <meta property="og:title" content="EstheticaAI - Automação para Clínicas de Estética com IA" />
+    <meta property="og:title" content="IABeauty - Automação para Clínicas de Estética com IA" />
     <meta property="og:description" content="Transforme sua clínica de estética com automação via WhatsApp. Agendamentos, confirmações e atendimento 24/7 com inteligência artificial." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@estheticaai" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
